app/assets/stylesheets/site/layout.css.sass
@import "site/variables"

html,
body
  height: 100%

.container
  max-width: none !important
  width: 970px !important

.container-narrow
  width: 700px !important


section[role="main"]
  position: relative
  padding-top: 40px
  padding-bottom: 100px

  & > * > header
    position: relative
    padding-bottom: 30px

  *:not(h1) ~ nav
    margin-top: 20px

  .actions
    display: flex
    flex-direction: column
    justify-content: center
    align-items: center
    position: absolute
    top: 100px
    left: -100px

    & > *
      margin-top: 20px

      &:first-child
        margin-top: 0

    .btn-link
      color: $text-muted

      & > i
        top: 2px
        font-size: 24px

      &:focus,
      &:hover
        color: $text-color

  section[id]
    margin-top: 40px

  & > .jumbotron
    position: relative
    top: -60px

article[role="main"]
  margin: 0 auto
  width: 700px

aside[role="sidebar"]
  & > .container
    padding: 0
    width: 210px !important

    &.affix
      top: 60px

    &.affix-bottom
      position: absolute
      top: auto !important
      bottom: 0

  .divider
    border-top: solid 1px $gray-lighter

